--- a/frontend/src/app/matches/matches.component.html
+++ b/frontend/src/app/matches/matches.component.html
@@ -1,2 +1,9 @@
-<h3>Available Matches</h3>
-<app-match-tile-template *ngFor="let match of matchData.matches" [matchId]="match"></app-match-tile-template>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h3>Available Matches</h3>
+            <app-match-tile-template *ngFor="let match of matchData.matches" [matchId]="match"></app-match-tile-template>
+        </div>
+    </div>
+</div>
+    
