--- a/frontend/src/app/upload/upload.component.html
+++ b/frontend/src/app/upload/upload.component.html
@@ -8,18 +8,16 @@
         <div>
   
           <div class="form-group">
-            <!--<label>Select RCG file</label>-->
+            <label>Select RCG file</label>
             <div class="custom-file">
-              <input type="file" class="custom-file-input" name="rcg" id="rcg" (change)="onRCGFileChanged($event)">
-              <label class="custom-file-label" for="rcg">Select RCG file...</label>
+              <input type="file" name="rcg" id="rcg" (change)="onRCGFileChanged($event)">
             </div>
           </div>
   
           <div class="form-group">
-            <!--<label>Select RCL file</label>-->
+            <label>Select RCL file</label>
             <div class="custom-file">
-              <input type="file" class="custom-file-input" name="rcl" id="rcl" (change)="onRCLFileChanged($event)">
-              <label class="custom-file-label" for="rcl">Select RCL file...</label>
+              <input type="file" name="rcl" id="rcl" (change)="onRCLFileChanged($event)">
             </div>
           </div>
   
