Adding loading spinner made with Angular Material for upload functionality

--- a/frontend/src/app/upload/upload.component.html
+++ b/frontend/src/app/upload/upload.component.html
@@ -1,3 +1,5 @@
+<app-loading-spinner [isLoading]="isLoading()"></app-loading-spinner>
+
 <div class="container">
     <div class="row">
       <div class="col">
