--- a/frontend/src/app/matches/match-tile-template/match-tile-template.component.html
+++ b/frontend/src/app/matches/match-tile-template/match-tile-template.component.html
@@ -1,4 +1,4 @@
-<div style="display:flex; justify-content:space-between; cursor: pointer" 
+<div routerLink="{{'/matches/' + matchId}}" style="display:flex; justify-content:space-between; cursor: pointer" 
      class="bg-dark text-light p-3 rounded mb-2">
       <div>{{matchResume}}</div>
 </div>
