Adjusting text on match stats page

--- a/frontend/src/app/match-stats/match-stats.component.html
+++ b/frontend/src/app/match-stats/match-stats.component.html
@@ -24,7 +24,7 @@
         </tr>
         <tr>
             <th>{{matchData.leftTeam.shotAccuracy}}%</th>
-            <th>Shots accuracy</th>
+            <th>Shot accuracy</th>
             <th>{{matchData.rightTeam.shotAccuracy}}%</th>
         </tr>
         <tr>
@@ -45,7 +45,7 @@
         <tr>
             <th>{{matchData.leftTeam.passAccuracy}}%</th>
             <th>Pass accuracy</th>
-            <th>{{matchData.rightTeam.passAccuracy}}%</th>
+            <th>{{matchData.rightTeam.passAccuracy}}%   </th>
         </tr>
         <tr>
             <th>{{matchData.leftTeam.interceptions}}</th>
