--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+    padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #1a1a1a;
+    color: #f5f5f5;
+    position: relative;
+    transition: all .3s ease-in-out;
+}
