--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -9,3 +9,14 @@ body {
     position: relative;
     transition: all .3s ease-in-out;
 }
+
+.box {
+    width: 90%;
+    margin: 0 auto;
+    margin-bottom: 15px;
+    background-color: #2b2b2b;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, .1);
+    padding: 30px;
+    border-radius: 9px;
+    color: #f5f5f5;
+}
