--- a/frontend/src/app/upload/loading-spinner/loading-spinner.component.html
+++ b/frontend/src/app/upload/loading-spinner/loading-spinner.component.html
@@ -1,3 +1,3 @@
-<div class="container" *ngIf="isLoading | async">
+<div class="spinner-container" *ngIf="isLoading | async">
 	<mat-spinner aria-busy="true"></mat-spinner>
 </div>
