--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,11 @@
-<nav class="nav">
-    <h2>Robocup Log Explorer</h2>
-</nav>
-
-<ul class="nav nav-pills d-flex">
-    <li class="nav-item dark">
+<ul class="nav nav-pills bg-dark p-2" style="margin-bottom: 20px;">
+    <li class="nav-item">
+        <h2>Robocup Log Explorer</h2>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/']" routerLinkActive="router-link-active">Home</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link" [routerLink]="['/upload']" routerLinkActive="router-link-active">Upload</a>
     </li>
     <li class="nav-item">
