Displaying new analysis data format in frontend

--- a/frontend/src/app/match-stats/match-stats.component.html
+++ b/frontend/src/app/match-stats/match-stats.component.html
@@ -56,6 +56,21 @@
                     <th>Interceptions</th>
                     <th>{{matchData.rightTeam.interceptions}}</th>
                 </tr>
+                <tr>
+                    <th>{{matchData.leftTeam.fouls}}</th>
+                    <th>Fouls</th>
+                    <th>{{matchData.rightTeam.fouls}}</th>
+                </tr>
+                <tr>
+                    <th>{{matchData.leftTeam.offsides}}</th>
+                    <th>Offsides</th>
+                    <th>{{matchData.rightTeam.offsides}}</th>
+                </tr>
+                <tr>
+                    <th>{{matchData.leftTeam.corners}}</th>
+                    <th>Corners</th>
+                    <th>{{matchData.rightTeam.corners}}</th>
+                </tr>
             </tbody>
         </table>
     </div>
