--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ul class="nav nav-pills bg-dark p-2" style="margin-bottom: 20px;">
     <li class="nav-item">
-        <h2>Robocup Log Explorer</h2>
+        <img src="../assets/logo.png" alt="logo" style="width: 130px;">
     </li>
     <li class="nav-item">
         <a class="nav-link" [routerLink]="['/']" routerLinkActive="router-link-active">Home</a>
