Adding hover tween to match tile

--- a/frontend/src/app/matches/match-tile-template/match-tile-template.component.html
+++ b/frontend/src/app/matches/match-tile-template/match-tile-template.component.html
@@ -1,4 +1,3 @@
-<div routerLink="{{'/matches/' + matchId}}" style="display:flex; justify-content:space-between; cursor: pointer" 
-     class="box">
-      <div>{{matchResume}}</div>
+<div routerLink="{{'/matches/' + matchId}}" class="box match-box">
+      {{matchResume}}
 </div>
