--- a/frontend/src/app/matches/match-tile-template/match-tile-template.component.css
+++ b/frontend/src/app/matches/match-tile-template/match-tile-template.component.css
@@ -15,10 +15,12 @@
     height: 100%;
     background: rgba(59, 59, 59, 0.4);
     z-index: -1;
-    transform: scale(0);
+    transform: scaleX(0);
+    transform-origin: right;
     transition: transform 200ms ease-in;
 }
 
 .match-box:hover::after {
-    transform: scale(1);
+    transform: scaleX(1);
+    transform-origin: left;
 }
