Adding goal scorers visualization to match stats table

--- a/frontend/src/app/match-stats/match-stats.component.html
+++ b/frontend/src/app/match-stats/match-stats.component.html
@@ -19,6 +19,11 @@
                     <td>{{matchData.rightTeam.goals}}</td>
                 </tr>
                 <tr>
+                    <td style="white-space: pre-wrap">{{parseScorers(matchData.leftTeam.scorers)}}</td>
+                    <td>Scorers</td>
+                    <td style="white-space: pre-wrap">{{parseScorers(matchData.rightTeam.scorers)}}</td>
+                </tr>
+                <tr>
                     <td>{{matchData.leftTeam.shots}}</td>
                     <td>Shots</td>
                     <td>{{matchData.rightTeam.shots}}</td>
